Fix tweet image alignment across breakpoints

--- a/app/assets/stylesheets/layouts/homepage/twitter-slider.scss
+++ b/app/assets/stylesheets/layouts/homepage/twitter-slider.scss
@@ -16,10 +16,14 @@
     background-color: $color-4;
     box-shadow: 0 2px 3px 0 rgba($color-6, .15);
     overflow: hidden;
+  }
 
-    > .row {
-      width: 100%;
-    }
+  .tweet-row {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
   }
 
   .tweet {
@@ -82,9 +86,9 @@
 
   .tweet-image {
     position: relative;
-    width: calc(100% - 100px);
     height: 150px;
-    margin: 0 auto;
+    margin-right: -3%;
+    margin-left: -3%;
     background-color: $color-4;
     background-repeat: no-repeat;
     background-position: center;
@@ -122,6 +126,10 @@
 
 @media#{$mq-tablet} {
   .twitter-slider {
+    .tweet-row {
+      flex-direction: row;
+    }
+
     .buttons_nav {
       &.prev {
         left: -25px;
@@ -142,8 +150,6 @@
     }
 
     .tweet-image {
-      right: -3%;
-      width: 100%;
       height: 350px;
     }
   }
